# cpp-template

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh
src/: main.cpp
